src/test/deca/syntax/valid/created/cast.deca
// Description :
//    test de la syntaxe du cast
//
// Resultats :
//		Ok

{
(a)(a);
}