src/test/deca/syntax/invalid/created/operande_manquante/leq_a_.deca
// Description :
//    test leq pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c = a <= ;
}
